--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "@manaflair/redux-batch": "^1.0.0",
     "@reduxjs/toolkit": "^2.11.2",
     "bootstrap": "^5.3.8",
+    "i18next": "^25.8.10",
     "react": "^19.2.0",
     "react-bootstrap": "^2.10.10",
     "react-dom": "^19.2.0",
+    "react-i18next": "^16.5.4",
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "react-router": "^7.12.0",
